// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuToggleButton Snapshot Test should match the snapshot when closed 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1tvuiyo"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1oq5es3-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <div
        class="MuiBox-root css-jt3tvc"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MenuToggleButton Snapshot Test should match the snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1tvuiyo"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1oq5es3-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <div
        class="MuiBox-root css-jt3tvc"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="MenuOpenIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h13v-2H3zm0-5h10v-2H3zm0-7v2h13V6zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5z"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
